# django-weasyprint

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  Justfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  publish.yml
django_weasyprint/: __init__.py  utils.py  views.py
django_weasyprint/tests/: __init__.py  settings.py  test_utils.py  test_views.py  urls.py
django_weasyprint/tests/testproject/: manage.py  settings.py  urls.py  wsgi.py
django_weasyprint/tests/testproject/testapp/: urls.py  views.py
django_weasyprint/tests/testproject/testapp/templates/: sample1.html
src/django_weasyprint/: __init__.py  utils.py  views.py
tests/: __init__.py  conftest.py  test_djangourlfetcher.py  test_utils.py  test_views.py
tests/templates/: example.html
