[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-weasyprint"
version = "2.4.0"
authors = [
    {name = "Florian Demmer", email = "fdemmer@gmail.com"},
    {name = "Jeroen Dekkers"},
]
description = "Django WeasyPrint integration"
readme = "README.rst"
license = {text = "Apache-2.0"}
keywords = [
    "Django",
    "PDF",
    "WeasyPrint",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2",
    "WeasyPrint>=59",
]

[project.urls]
Changelog = "https://github.com/fdemmer/django-weasyprint/blob/main/CHANGELOG.md"
Homepage = "https://github.com/fdemmer/django-weasyprint"
Repository = "https://github.com/fdemmer/django-weasyprint"

[tool.coverage.run]
branch = true
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
show_contexts = true

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
select = [
    "F", "E", "W", "C4", "C90", "B", "I", "INT", "PD", "PTH",
    "D201", "D202", "D206", "D207", "D208", "D209", "D211", "D213",
    "D300", "D403", "D419",
]
ignore = [
    "E265",
    "F403", "F405", "F722", "F821",
    "C408",
    "PD901",
]
fixable = ["I001"]
target-version = "py38"
line-length = 90

[tool.ruff.isort]
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "django", "first-party", "local-folder"]

[tool.ruff.isort.sections]
"django" = ["django"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
packages = ["django_weasyprint"]
